# goeschen

./: Kalliope-Abzug.ipynb  README.md  pyproject.toml
.ipynb_checkpoints/: Kalliope-Abzug-checkpoint.ipynb
dat/: nicht-einspielbar.txt  od-fehlerliste.txt
skripte/: Kalliope-Abzug.ipynb  Untitled.ipynb
skripte/.ipynb_checkpoints/: Kalliope-Abzug-checkpoint.ipynb
