[tool.poetry]
name = "goeschen"
version = "0.1.0"
description = ""
authors = ["André Wendler <andre.wendler@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.4.3"
jupyterlab = "^3.4.5"
xmltodict = "^0.13.0"
beautifulsoup4 = "^4.11.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
